# jsa

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build-static-app.sh  build.sh  default.conf  docker-compose.yaml
app/: EditProfile.26ea354f.js  EditProfile.74a28870.js  EditProfile.b5cc9942.js  app.093b441f.js  app.1322ebab.js  app.1bc3cc1a.css  app.1da226a2.js  app.2d2c71fb.js  app.31f60115.css  app.386a8114.js  app.44302e40.js  app.5005fef3.js  app.5a66df9f.css  app.636480fb.js  app.68b6b38c.js  app.7eea7209.js  app.82fc9f90.js  app.8a94d7c1.js  app.8d2d1c73.js  app.98c32931.js  app.b722dcfc.js  app.c7511b93.js  app.ce7466d1.css  board.0c002894.js  board.bbf1ea24.js  build.sh  domain.09351d25.js  domain.16655f98.js  domain.2889dd4b.js  domain.cdb93ec8.js  domain.db942fe1.js  index.html  index.js  index2.html  login.0dfdf2f4.css  login.111256e8.js  login.17f18140.css  login.2282c5ff.js  login.24632fbd.js  login.27d31c92.js  (+37 more)
app/conf/: default.conf
app/src/: app.js  base.js  load.js  login.js  main.js  routes.js
conf/: default.conf  users.toml
data/: config.toml  default.conf  users.toml
data/domains/: example.toml
data/users/: root.toml
docs/: jsa.ddl  jsa.vpp  jsa.vpp~7  jsa.vpp~8
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
src/: conf.rs  config.rs  core.rs  domain.rs  errors.rs  gord.go  http.rs  http2.rs  item.rs  jrd.rs  jsa.rs  lib.rs  main.rs  main2.rs  models.rs  paths.rs  schema.rs  user.rs  user2.rs  util.rs
src/http/: console.rs  entry.rs  (+5 more)
static/: domain_stat.js  domain_stat_src.js
tests/: lang.rs  mutex.rs
(+56 files in other folders)
