[package]
name = "jsa"
version = "0.1.0"
edition = "2018"
authors = ["jarryliu <jarrysix@gmail.com>"]
description = "A short url service."
license = "Apache-2.0"

[dependencies]
clap = "~2.32"
rocket ="~0.4.0"
url = "~1"
rocket_contrib = "*"
toml = "~0.4"
serde = "~1.0"
serde_json = "~1.0"
serde_derive = "~1.0"
reqwest = "*"
regex = "~1"
time = "~0.1"
lazy_static = "*"
sha1 = "~0.6"
md5 = "~0.6"
base64 = "*"
failure="*"
diesel = { version = "~1.4", features = ["postgres","r2d2"] }
diesel_migrations = "~1.4"
openssl = "*"
dotenv = "0.9.0"
session = {path="src/session"}
[lib]
name = "jsa"
path = "src/lib.rs"
test = false # no unit tests

[[bin]]
name = "jsa"
path = "src/main.rs"
test = false